welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: illegal start of simple expression
   (droite()) && if (isFacingTrail()) {
                 ^